fixed css bug in tags on small screens

--- a/source/css/_partial/rwd.styl
+++ b/source/css/_partial/rwd.styl
@@ -118,7 +118,6 @@
   .entry-meta-header
     position: static
     width: auto
-    height: 4rem
     .meta-elements
       display: inline
       margin-right: 1em
